--- a/frontend/src/style/register.css
+++ b/frontend/src/style/register.css
@@ -144,8 +144,8 @@ form .submit-btn:hover {
 }
 
 .image-preview-wrapper img.image-preview {
-  max-width: 40%;
-  border-radius: 8px;
+  max-width: 80%;
+  border-radius: 50%;
   height: auto;
   display: inline-block;
 }
@@ -217,8 +217,13 @@ p .lgn-btn {
   }
   
   .upload-container {
-    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
   }
+  
   
   .submit-btn-container {
     max-width: 100%;
