--- a/frontend/src/style/homePage/banner.css
+++ b/frontend/src/style/homePage/banner.css
@@ -282,12 +282,13 @@
 }
 
 /* Small Mobile */
-@media (max-width: 400px) {
+@media (max-width: 430px) {
   .banner-container {
-    height: 300px;
+    height: 400px;
   }
   .text-container {
-    padding: 0.5rem;
+    padding: 1.5rem;
+    margin-top: 20px;
   }
   .text-container h1 {
     font-size: 1.5rem;
